# ahlbatross

./: README.md  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml
.github/workflows/: cli_test.yml  coverage.yml  no_byte_order_mark.yml  python-publish.yml  pythonlint.yml  unittests.yml
ahb_diff/: main.py
data/output/FV2304_FV2210/COMDIS/: 29001.csv  29001.xlsx  29002.csv  29002.xlsx
data/output/FV2304_FV2210/IFTSTA/: 21000.csv  21000.xlsx  21001.csv  21001.xlsx  21002.csv  21002.xlsx  21003.csv  21003.xlsx  21004.csv  21004.xlsx  21005.csv  21005.xlsx  21007.csv  21007.xlsx  21009.csv  21009.xlsx  21010.csv  21010.xlsx  21011.csv  21011.xlsx  21012.csv  21012.xlsx  21013.csv  21013.xlsx  21015.csv  21015.xlsx  21018.csv  21018.xlsx  21024.csv  21024.xlsx  21025.csv  21025.xlsx  21026.csv  21026.xlsx  21027.csv  21027.xlsx  21028.csv  21028.xlsx  21029.csv  21029.xlsx  (+26 more)
data/output/FV2304_FV2210/INSRPT/: 23001.csv  23001.xlsx  23003.csv  23003.xlsx  23004.csv  23004.xlsx  23005.csv  23005.xlsx  23008.csv  23008.xlsx  23009.csv  23009.xlsx  23011.csv  23011.xlsx  23012.csv  23012.xlsx
data/output/FV2304_FV2210/INVOIC/: 31001.csv  31001.xlsx  31002.csv  31002.xlsx  31003.csv  31003.xlsx  31004.csv  31004.xlsx  31005.csv  31005.xlsx  31006.csv  31006.xlsx  31007.csv  31007.xlsx  31008.csv  31008.xlsx  31009.csv  31009.xlsx  31010.csv  31010.xlsx  31011.csv  31011.xlsx
data/output/FV2304_FV2210/MSCONS/: 13002.csv  13002.xlsx  13003.csv  13003.xlsx  13005.csv  13005.xlsx  13006.csv  13006.xlsx  13007.csv  13007.xlsx  13008.csv  13008.xlsx  13009.csv  13009.xlsx  13010.csv  13010.xlsx  13011.csv  13011.xlsx  13012.csv  13012.xlsx  13013.csv  13013.xlsx  13014.csv  13014.xlsx  13015.csv  13015.xlsx  13016.csv  13016.xlsx  13017.csv  13017.xlsx  13018.csv  13018.xlsx  13019.csv  13019.xlsx  13020.csv  13020.xlsx  13021.csv  13021.xlsx  13022.csv  13022.xlsx  (+6 more)
data/output/FV2304_FV2210/ORDCHG/: 39000.csv  39000.xlsx  39001.csv  39001.xlsx  39002.csv  39002.xlsx
data/output/FV2304_FV2210/ORDERS/: 17001.csv  17001.xlsx  17002.csv  17002.xlsx  17003.csv  17003.xlsx  17004.csv  17004.xlsx  17005.csv  17005.xlsx  17006.csv  17006.xlsx  17007.csv  17007.xlsx  17008.csv  17008.xlsx  17009.csv  17009.xlsx  17101.csv  17101.xlsx  17102.csv  17102.xlsx  17103.csv  17103.xlsx  17104.csv  17104.xlsx  17110.csv  17110.xlsx  17113.csv  17113.xlsx  17114.csv  17114.xlsx  17115.csv  17115.xlsx  17116.csv  17116.xlsx  17117.csv  17117.xlsx  17118.csv  17118.xlsx  (+38 more)
data/output/FV2304_FV2210/ORDRSP/: 19001.csv  19001.xlsx  19002.csv  19002.xlsx  19003.csv  19003.xlsx  19004.csv  19004.xlsx  19005.csv  19005.xlsx  19006.csv  19006.xlsx  19007.csv  19007.xlsx  19009.csv  19009.xlsx  19010.csv  19010.xlsx  19011.csv  19011.xlsx  19012.csv  19012.xlsx  19013.csv  19013.xlsx  19014.csv  19014.xlsx  19015.csv  19015.xlsx  19016.csv  19016.xlsx  19101.csv  19101.xlsx  19102.csv  19102.xlsx  19103.csv  19103.xlsx  19104.csv  19104.xlsx  19110.csv  (+35 more)
src/ahlbatross/: cli.py  core.py  csv.py  excel.py  main.py  utils.py
src/ahlbatross/core/: ahb_comparison.py  ahb_diff.py  ahb_multicomparison.py  ahb_processing.py  core.py
src/ahlbatross/db/: __init__.py  ahb_retrieval.py  sqlmodels.py
src/ahlbatross/enums/: diff_types.py
src/ahlbatross/formats/: csv.py  excel.py  xlsx.py  xlsx_new.py
src/ahlbatross/models/: ahb.py
src/ahlbatross/utils/: xlsx_formatting.py
unittests/: .pylintrc  conftest.py  test_ahb_comparison.py  test_ahb_export.py  test_ahb_import.py  test_ahb_parser.py  test_ahb_processing.py  test_ahb_row_comparison.py  test_cli.py  test_csv_comparison.py  test_csv_import.py  test_csv_processor.py  test_data_export.py  test_export.py  test_myclass.py  test_parse_ahb_data.py  test_parse_submodule.py  test_process_csv.py  test_xlsx_export.py
unittests/__snapshots__/: test_ahb_comparison.ambr
unittests/test_data/: .gitignore  pruefid_00001.csv  pruefid_00002.csv  pruefid_00011.csv  pruefid_00022.csv
(+3508 files in other folders)
