[project]
name = "ahlbatross"
description = "Tool for comparing and visualizing changes between AHB documents across different format version releases."
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Hochfrequenz Unternehmensberatung GmbH", email = "info@hochfrequenz.de" }]
keywords = ["ahb"]
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "efoli>=2.1.0",
    "pydantic>=2.10.6",
    "xlsxwriter>=3.2.0",
    "typer>=0.15.4",
    "fundamend[sqlmodels]>=0.27.0",
    "py7zr"
]
dynamic = ["version"]

[project.scripts]
ahlbatross = "ahlbatross.main:cli"

[project.urls]
Changelog = "https://github.com/Hochfrequenz/ahlbatross/releases"
Homepage = "https://github.com/Hochfrequenz/ahlbatross"

[project.optional-dependencies]
tests = [
    "pytest==9.0.1"
]
linting = [
    "pylint==4.0.2"
]
type_check = [
    "mypy==1.19.0"
]
spell_check = [
    "codespell==2.4.1"
]
coverage = [
    "coverage==7.12.0"
]
formatting = [
    "black==25.11.0",
    "isort==7.0.0"
]
packaging = [
    "build==1.3.0",
    "twine==6.2.0"
]
dev = [
    "pip-tools"
]

[tool.black]
line-length = 120
target_version = ["py311", "py312", "py313", "py314"]

[tool.isort]
line_length = 120
profile = "black"

[tool.pylint."MESSAGES CONTROL"]
max-line-length = 120

[mypy]
truethy-bool = true
[tool.mypy]
disable_error_code = []


[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/_ahlbatross_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
exclude = ["/unittests"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
